[gd_scene load_steps=4 format=3 uid="uid://b63rxhble23w1"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_cms6h"]
[ext_resource type="PackedScene" uid="uid://bqwywdx3bysmf" path="res://scenes/tabuleiro_maior.tscn" id="1_y08gp"]
[ext_resource type="PackedScene" uid="uid://csgr7vd17feoo" path="res://scenes/info_panel.tscn" id="2_shwp6"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_cms6h")

[node name="Fundo" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.026438, 0.339213, 0.439275, 1)

[node name="InfoPanel" parent="." instance=ExtResource("2_shwp6")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 865.0
grow_horizontal = 1
grow_vertical = 1

[node name="TabuleiroMaior" parent="." instance=ExtResource("1_y08gp")]
offset_left = 120.0
offset_top = 16.0
offset_right = 1200.0
offset_bottom = 1096.0

[node name="IA_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="check_ia_ia" from="InfoPanel" to="." method="_on_info_panel_check_ia_ia"]
[connection signal="timeout" from="IA_Timer" to="." method="_on_ia_timer_timeout"]
